2012-02-24  Joseph Myers  <joseph@codesourcery.com>

	* manual/texinfo.tex: Update to version 2012-01-19.16.

2012-02-24  Joseph Myers  <joseph@codesourcery.com>

	* manual/Makefile (licenses): Change fdl-1.1.texi to fdl-1.3.texi.

2012-02-24  Roland McGrath  <roland@hack.frob.com>

	[BZ #13738]
	* manual/libc.texinfo (FDL_VERSION): Set to 1.3.
	* manual/fdl-1.3.texi: New file.
	* manual/fdl-1.1.texi: File removed.

	[BZ #13738]
	* manual/libc.texinfo (FDL_VERSION): New @set.
	Use it for mention of FDL in cover text.
	(Documentation License): Use it in @include file name.

2012-02-22  Joseph Myers  <joseph@codesourcery.com>
	    Roland McGrath  <roland@hack.frob.com>

	[BZ #5461]
	* manual/arith.texi (strtoll): Refer to LLONG_MAX and LLONG_MIN,
	not LONG_LONG_MAX and LONG_LONG_MIN.
	* manual/lang.texi (LONG_LONG_MIN): Document first as ISO
	LLONG_MIN.  Refer to LONG_LONG_MIN only as older GCC-specific
	name.
	(LONG_LONG_MAX, LLONG_MAX, ULONG_LONG_MAX, ULLONG_MAX): Likewise.

2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #2547]
	[BZ #11365]
	* sysdeps/ieee754/flt-32/s_nearbyintf.c (__nearbyintf): Do not
	manipulate bits before adding and subtracting TWO23[sx].
	* math/libm-test.inc (nearbyint_test): Add more tests.

2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #2548]
	* sysdeps/ieee754/flt-32/s_rintf.c (__rintf): Do not manipulate
	bits before adding and subtracting TWO23[sx].
	* math/libm-test.inc (rint_test): Add more tests.
	(rint_test_tonearest): Likewise.
	(rint_test_towardzero): Likewise.
	(rint_test_downward): Likewise.
	(rint_test_upward: Likewise.

2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #10110]
	* include/stdc-predef.h: New file.  Extracted from features.h.
	* include/features.h: Include stdc-predef.h.
	* Makefile (headers): Add stdc-predef.h.
	* CONFORMANCE (Compiler limitations): Update.

2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	* manual/libc.texinfo (VERSION, UPDATED): Revert.
