@@ -1,3 +1,12 @@
+2012-02-24  Ulrich Drepper  <drepper@gmail.com>
+
+	* stdlib/fmtmsg.c (fmtmsg): Lock around use of severity list.
+	Reported by Peng Haitao <penght@cn.fujitsu.com>.
+
+2012-02-24  Joseph Myers  <joseph@codesourcery.com>
+
+	* configure.in: Use -o not -a in test for unsupported multi-arch.
+
 2012-02-24  Joseph Myers  <joseph@codesourcery.com>
 
 	* manual/texinfo.tex: Update to version 2012-01-19.16.
